Moving fixing shifting content from html to .cv

--- a/angularjs/assets/css/app.css
+++ b/angularjs/assets/css/app.css
@@ -38,45 +38,40 @@
 }
 
 /* line 1, ../../source/sass/global/_global.scss */
-html {
-  margin-left: calc(100vw - 100%);
-}
-
-/* line 4, ../../source/sass/global/_global.scss */
 body {
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   background-color: #e8e8e8;
   margin: 0;
 }
-/* line 9, ../../source/sass/global/_global.scss */
+/* line 6, ../../source/sass/global/_global.scss */
 body ul {
   padding-left: 0;
   margin-top: 0;
 }
-/* line 12, ../../source/sass/global/_global.scss */
+/* line 9, ../../source/sass/global/_global.scss */
 body ul li {
   list-style-type: none;
 }
 
-/* line 21, ../../source/sass/global/_global.scss */
+/* line 18, ../../source/sass/global/_global.scss */
 h1,
 .h1 {
   font-size: 1rem;
 }
 
-/* line 25, ../../source/sass/global/_global.scss */
+/* line 22, ../../source/sass/global/_global.scss */
 h2,
 .h2 {
   font-size: 24px;
   font-size: 2.4rem;
 }
 
-/* line 37, ../../source/sass/global/_global.scss */
+/* line 34, ../../source/sass/global/_global.scss */
 .left {
   float: left;
 }
 
-/* line 40, ../../source/sass/global/_global.scss */
+/* line 37, ../../source/sass/global/_global.scss */
 .right {
   float: right;
 }
@@ -173,12 +168,12 @@ table tr td {
   text-align: center;
   padding-right: 60px;
 }
-/* line 32, ../../source/sass/global/_global.scss */
+/* line 29, ../../source/sass/global/_global.scss */
 .navigation:before, .navigation:after {
   content: " ";
   display: table;
 }
-/* line 33, ../../source/sass/global/_global.scss */
+/* line 30, ../../source/sass/global/_global.scss */
 .navigation:after {
   clear: both;
 }
@@ -216,6 +211,11 @@ table tr td {
 
 /* line 3, ../../source/sass/module/_cv.scss */
 .cv {
+  margin-left: calc(100vw - 100%);
+}
+
+/* line 6, ../../source/sass/module/_cv.scss */
+.cv__widget {
   background-color: white;
   width: 340px;
   margin: 150px auto;
@@ -225,68 +225,68 @@ table tr td {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 0 40px rgba(0, 0, 0, 0.1);
 }
 
-/* line 13, ../../source/sass/module/_cv.scss */
+/* line 16, ../../source/sass/module/_cv.scss */
 .cv__wrapper {
   padding: 20px;
 }
-/* line 32, ../../source/sass/global/_global.scss */
+/* line 29, ../../source/sass/global/_global.scss */
 .cv__wrapper:before, .cv__wrapper:after {
   content: " ";
   display: table;
 }
-/* line 33, ../../source/sass/global/_global.scss */
+/* line 30, ../../source/sass/global/_global.scss */
 .cv__wrapper:after {
   clear: both;
 }
-/* line 16, ../../source/sass/module/_cv.scss */
+/* line 19, ../../source/sass/module/_cv.scss */
 .cv__wrapper.top {
   border-bottom: 1px solid #e8e8e8;
   font-size: 14px;
 }
-/* line 20, ../../source/sass/module/_cv.scss */
+/* line 23, ../../source/sass/module/_cv.scss */
 .cv__wrapper.bottom {
   padding: 0 20px 20px 20px;
 }
 
-/* line 24, ../../source/sass/module/_cv.scss */
+/* line 27, ../../source/sass/module/_cv.scss */
 .cv__user {
   padding: 10px 0 5px 0;
 }
-/* line 32, ../../source/sass/global/_global.scss */
+/* line 29, ../../source/sass/global/_global.scss */
 .cv__user:before, .cv__user:after {
   content: " ";
   display: table;
 }
-/* line 33, ../../source/sass/global/_global.scss */
+/* line 30, ../../source/sass/global/_global.scss */
 .cv__user:after {
   clear: both;
 }
-/* line 28, ../../source/sass/module/_cv.scss */
+/* line 31, ../../source/sass/module/_cv.scss */
 .cv__user img {
   float: left;
 }
-/* line 31, ../../source/sass/module/_cv.scss */
+/* line 34, ../../source/sass/module/_cv.scss */
 .cv__user div {
   float: left;
   margin: 0 0 0 10px;
 }
 
-/* line 38, ../../source/sass/module/_cv.scss */
+/* line 41, ../../source/sass/module/_cv.scss */
 .cv__cv--heading {
   width: 50%;
   font-size: 12px;
 }
 
-/* line 43, ../../source/sass/module/_cv.scss */
+/* line 46, ../../source/sass/module/_cv.scss */
 .cv__cv--input {
   width: 140px;
 }
 
-/* line 47, ../../source/sass/module/_cv.scss */
+/* line 50, ../../source/sass/module/_cv.scss */
 .cv__cv--dropdown {
   border: 1px solid #e8e8e8;
 }
-/* line 50, ../../source/sass/module/_cv.scss */
+/* line 53, ../../source/sass/module/_cv.scss */
 .cv__cv--dropdown select {
   border: 0 !important;
   -webkit-appearance: none;
@@ -298,17 +298,17 @@ table tr td {
   color: #000;
   padding: 5px;
 }
-/* line 61, ../../source/sass/module/_cv.scss */
+/* line 64, ../../source/sass/module/_cv.scss */
 .cv__cv--dropdown select:hover {
   cursor: pointer;
 }
 
-/* line 66, ../../source/sass/module/_cv.scss */
+/* line 69, ../../source/sass/module/_cv.scss */
 .cv__cv--table {
   width: 100%;
 }
 
-/* line 70, ../../source/sass/module/_cv.scss */
+/* line 73, ../../source/sass/module/_cv.scss */
 .cv__cta {
   width: 100%;
   margin-top: 20px;
@@ -316,16 +316,16 @@ table tr td {
   font-size: 11px;
   padding: 20px 0 10px 0;
 }
-/* line 32, ../../source/sass/global/_global.scss */
+/* line 29, ../../source/sass/global/_global.scss */
 .cv__cta:before, .cv__cta:after {
   content: " ";
   display: table;
 }
-/* line 33, ../../source/sass/global/_global.scss */
+/* line 30, ../../source/sass/global/_global.scss */
 .cv__cta:after {
   clear: both;
 }
-/* line 77, ../../source/sass/module/_cv.scss */
+/* line 80, ../../source/sass/module/_cv.scss */
 .cv__cta h1 {
   font-size: 16px;
   margin: 0;
